--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 <p>Read more about <code>chain</code> at:
 <a href="http://underscorejs.org/#chain">http://underscorejs.org/#chain</a></p>
 
-<p><a href="formidablelabs.github.io/underscore-chain-talk">http://formidablelabs.github.io/underscore-chain-talk</a></p>
+<p><a href="http://formidablelabs.github.io/underscore-chain-talk">formidablelabs.github.io/underscore-chain-talk</a></p>
 
-<p><a href="github.com/FormidableLabs/underscore-chain-talk">https://github.com/FormidableLabs/underscore-chain-talk</a></p>
+<p><a href="https://github.com/FormidableLabs/underscore-chain-talk">github.com/FormidableLabs/underscore-chain-talk</a></p>
       </section>
       <!-- deck.navigation snippet--><a href="#" title="Previous" class="deck-prev-link">&#8592;</a><a href="#" title="Next" class="deck-next-link">&#8594;</a>
       <!-- deck.status snippet-->
